--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 		<script src="https://s3-ap-northeast-1.amazonaws.com/cubism3.live2d.com/sdk/js_eap/live2dcubismcore.min.js"></script>
 		<script src="js/live2dcubismframework.js"></script>
 		<script src="js/live2dcubismpixi.js"></script>
+		<script src="js/pixiAframeAR.js"></script>
 	</head>
 	<body style="margin:0px; overflow:hidden;">
-		<a-scene embedded arjs="debugUIEnabled:false; sourceType: webcam; detectionMode: mono; maxDetectionRate: 15;" vr-mode-ui="enabled: false">
-			<a-marker preset='custom' url='assets/logo_marker.patt' changeMatrixMode='modelViewMatrix'></a-marker>
+		<!-- maxDetectionRateはマーカーの検出フレームレート。モバイル向けなら15～20程度が目安 -->
+		<a-scene embedded arjs="debugUIEnabled: false; detectionMode: mono; maxDetectionRate: 15;" vr-mode-ui="enabled: false">
+			<a-marker preset='custom' url='assets/logo_marker.patt'></a-marker>
 			<a-entity camera></a-entity>
-<!--
-			<a-marker-camera preset='custom' url='assets/logo_marker.patt'></a-marker-camera>
--->
 		</a-scene>
-		<script src="js/pixiAframeAR.js"></script>
 	</body>
 </html>
