Update js files.

--- a/card.html
+++ b/card.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
-	        <script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/0.6.1/aframe-master.min.js"></script>
+	        <script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/0.7.1/aframe.min.js"></script>
 		<script src="js/aframe-ar.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.1/pixi.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
-		<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.0/pixi.js"></script>
 
 		<!--By including below library in your project you agree to http://live2d.com/eula/live2d-proprietary-software-license-agreement_en.html-->
 		<script src="https://s3-ap-northeast-1.amazonaws.com/cubism3.live2d.com/sdk/js_eap/live2dcubismcore.min.js"></script>
@@ -16,7 +11,8 @@
 		<script src="js/pixiAframeAR.js"></script>
 	</head>
 	<body style="margin:0px; overflow:hidden;">
-		<a-scene embedded arjs="debugUIEnabled:false;">
+		<!-- maxDetectionRateはマーカーの検出フレームレート。モバイル向けなら15～20程度が目安 -->
+		<a-scene embedded arjs="debugUIEnabled:false; sourceType: webcam; detectionMode: mono; maxDetectionRate: 15;" vr-mode-ui="enabled: false">
 			<a-marker preset='custom' url='assets/qr_marker.patt'></a-marker>
 			<a-entity camera></a-entity>
 		</a-scene>
