--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <html>
 	<head>
-	        <script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/0.7.1/aframe.min.js"></script>
-		<script src="js/aframe-ar.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.0/pixi.js"></script>
+	        <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+		<script src="https://rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.0/pixi.js"></script>
 
 		<!--By including below library in your project you agree to http://live2d.com/eula/live2d-proprietary-software-license-agreement_en.html-->
 		<script src="https://s3-ap-northeast-1.amazonaws.com/cubism3.live2d.com/sdk/js_eap/live2dcubismcore.min.js"></script>
-		<script src="js/live2dcubismframework.js"></script>
-		<script src="js/live2dcubismpixi.js"></script>
+
+		<script src="https://rawgit.com/Live2D/CubismJsComponents/master/example/wwwroot/js/live2dcubismframework.js"></script>
+		<script src="https://rawgit.com/Live2D/CubismJsComponents/master/example/wwwroot/js/live2dcubismpixi.js"></script>
+		<script src="js/pixiAframeAR.js"></script>
 	</head>
 	<body style="margin:0px; overflow:hidden;">
+		<!-- maxDetectionRateはマーカーの検出フレームレート。モバイル向けなら15～20程度が目安 -->
 		<a-scene embedded arjs="debugUIEnabled:false; sourceType: webcam; detectionMode: mono; maxDetectionRate: 15;" vr-mode-ui="enabled: false">
-			<a-marker preset='custom' url='assets/logo_marker.patt' changeMatrixMode='modelViewMatrix'></a-marker>
+			<a-marker preset='custom' type='pattern' url='assets/logo_marker.patt' changeMatrixMode='modelViewMatrix'></a-marker>
 			<a-entity camera></a-entity>
-<!--
-			<a-marker-camera preset='custom' url='assets/logo_marker.patt'></a-marker-camera>
--->
 		</a-scene>
-		<script src="js/pixiAframeAR.js"></script>
 	</body>
 </html>
