--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	</head>
 	<body style="margin:0px; overflow:hidden;">
 		<!-- maxDetectionRateはマーカーの検出フレームレート。モバイル向けなら15～20程度が目安 -->
-		<a-scene embedded arjs="debugUIEnabled:false; sourceType: webcam; detectionMode: mono; maxDetectionRate: 15;" vr-mode-ui="enabled: false">
-			<a-marker preset='custom' type='pattern' url='assets/logo_marker.patt' changeMatrixMode='modelViewMatrix'></a-marker>
+		<a-scene embedded arjs="debugUIEnabled:false; patternRatio: 0.9; detectionMode: mono; maxDetectionRate: 15;" vr-mode-ui="enabled: false">
+			<a-marker type='pattern' url='assets/logo_marker.patt' changeMatrixMode='modelViewMatrix'></a-marker>
 			<a-entity camera></a-entity>
 		</a-scene>
 	</body>
