--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	        <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
 		<script src="https://rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.0/pixi.js"></script>
+		<script src="js/aframe-rounded-component.js"></script>
 		<script src="js/aframe-draw-component.js"></script>
 		<script src="js/aframe-textwrap-component.js"></script>
 
@@ -17,6 +18,7 @@
 				font-family: "GenJyuuGothicX";
 				src: url('font/GenJyuuGothicX.woff') format('woff');
 			}
+			body { font-family: "GenJyuuGothicX"; }
 		</style>
 	</head>
 	<body style="margin:0px; overflow:hidden;">
@@ -26,6 +28,5 @@
 			<a-marker id="qr" type="pattern" url="assets/qr_marker.patt" changeMatrixMode="modelViewMatrix"></a-marker>
 			<a-entity camera></a-entity>
 		</a-scene>
-		<span style="font-family: 'GenJyuuGothicX';">&nbsp;</span>
 	</body>
 </html>
