Update message window.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<style type="text/css">
 			@font-face {
 				font-family: "GenJyuuGothicX";
-				src: url('font/GenJyuuGothicX.woff') format('woff');
+				src: url('font/GenJyuuGothicX.woff2') format('woff2');
 			}
 			body { font-family: "GenJyuuGothicX"; }
 		</style>
